data: Fix dark mode album tiles
By default the Adwaita dark .tile has no transparent background, but in the
Music case it looks better that way.

--- a/data/org.gnome.Music.css
+++ b/data/org.gnome.Music.css
@@ -7,6 +7,11 @@
     font-size: smaller;
 }
 
+/* By default in Adwaita dark this is not transparent */
+.tile {
+    background-color: transparent;
+}
+
 /* AlbumWidget */
 .title-artist {
     font-size: larger;
